tests/transpiler/x/scala/break_continue.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/break_continue.scala:7: error: not found: value continue
    continue
    ^
/workspace/mochi/tests/transpiler/x/scala/break_continue.scala:10: error: not found: value break
    break
    ^
two errors found
