tests/transpiler/x/scala/break_continue.scala
// Generated by Mochi v0.10.31 on 2025-07-20 10:35:26 GMT+7
object Main {
  def main(args: Array[String]): Unit = {
    val numbers: List[Int] = List(1, 2, 3, 4, 5, 6, 7, 8, 9)
    for (n <- numbers) {
    if (n % 2 == 0) {
    continue
  }
    if (n > 7) {
    break
  }
    println("odd number:", n)
  }
  }
}
